--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
         <div id="carouselExampleControls2" class="carousel slide " data-interval="5000" data-pause="hover" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img\truck2-removebg.png" alt="" height="440" width="1441">
+                    <img src="img\truck2-removebg.png" alt="" class="img-fluid">
 
                 </div>
                 <div class="carousel-item">
-                    <img src="img\all_trucks.png" alt="" height="440" width="1441">
+                    <img src="img\all_trucks.png" alt="" class="img-fluid">
                 </div>
                 <div class="carousel-item">
-                    <img src="img\Studio_Project (1).png" alt="" height="440" width="1441">
+                    <img src="img\Studio_Project (1).png" alt="" class="img-fluid">
                 </div>
 
             </div>
